# cpm-fibre-fa

./: .gitignore  Makefile  README.rst  pyproject.toml
data/: sorting.par
doc/: Doxyfile.in
doc/source/: sourcecode.rst
lib/ecmgen/: pyproject.toml
lib/ecmgen/src/: __init__.py  binner.py  crosslink_distributors.py  density_crosslinker.py  network.py  networks.py  networktype.py  parameters.py  regular_network.py  stranddistributions.py  strandgens.py
lib/ecmgen/tests/: test_network.py  test_strandgen.py
src/: ISV.pro  Tissue_Simulation_Toolkit.pri  focaladhesions.pro  twocells.pro
src/adhesions/: adhesion_index.cpp  adhesion_index.hpp  adhesion_movement.hpp  adhesion_mover.cpp  adhesion_mover.hpp  ecm_boundary_state.hpp
src/cellular_potts/: act.cpp  act.hpp  ca.cpp  ca.hpp  cell.cpp  cell.hpp  cell_direction.cpp  cell_direction.hpp  cell_division.cpp  cell_division.hpp  deltah.cpp  deltah.hpp  dish.cpp  dish.hpp  domaininit.cpp  domaininit.hpp  extension_history.cpp  extension_history.hpp  force_calculation.cpp  force_calculation.hpp  novikova_storm.cpp  novikova_storm.hpp
src/cpm_ecm/: qt_state_plotter.py  state_plotter.py
src/ecm/: make_ecm.py  muscle3.py  parameters.py  simulate_ecm.py  simulation.py  stretch_ecm.py
src/models/: ISV.cpp  ISV_ecm.ymmsl.in  adhesions.cpp  focaladhesions.cpp  focaladhesions.ymmsl.in  killadhesion.cpp  pushing.cpp  sorting.cpp  tubeformation.ymmsl.in  tumor.cpp  twocells.cpp  vessel.cpp
src/parameters/: parameters.hpp
src/plotting/: plotter.cpp  plotter.hpp
src/reaction_diffusion/: pde.hpp  pde_cuda.cu  (+1 more)
(+268 files in other folders)
