[project]
name = "ecmgen"
authors = [
    { name="Koen", email="koen19@gmail.com" }
]
version = "0.0.1-dev"
dependencies = [
    "numpy",
    "scipy",
    "pytest"
]

[build-system]
requires = [
    "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ecmgen"]

[tool.setuptools.package-dir]
ecmgen = "src"

[tool.setuptools.package-data]
ecmgen = ["py.typed"]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["pkg*"]  # alternatively: `exclude = ["additional*"]`
# namespaces = false

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
skip_missing_interpreters = true
env_list =
    py37
    py38
    py39
    py310
    py311

[testenv]
deps =
    setuptools >= 61.0.0
    mypy

commands =
    mypy
"""

[tool.mypy]
mypy_path = "src"
files = "src/**/*.py"

[[tool.mypy.overrides]]
module = [
    'scipy.stats',
    'scipy.signal',
    'ecmgen.*'
    ]

ignore_missing_imports = true


